--- a/index.css
+++ b/index.css
@@ -205,3 +205,10 @@ body {
         transform: translateX(0);
     }
 }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+  }
