--- a/index.css
+++ b/index.css
@@ -212,3 +212,18 @@ body {
     right: 20px;
     display: none;
   }
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+    display: none;
+    opacity: 999;
+    border-radius: 500px;
+    background-color: #edc6fd;
+    padding: 6px 12px;
+    border: none;
+  }
+
+
+  
