--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@
 
 body {
     font-family: "Nunito", sans-serif;
-    background: linear-gradient(10deg, #b7eefd, #fff, #edc6fd);
+    background: linear-gradient(10deg, #edc6fd, #fff, #b7eefd);
     /* background-color: #f0f8fb; */
     color: #252644;
     scroll-behavior: smooth;
@@ -266,30 +266,30 @@ body {
     margin: 0 auto;
     max-width: 1000px;
     width: 100%;
-  }
-  
-  h1 {
+}
+
+h1 {
     text-align: center;
     margin: 50px 0;
-  }
-  
-  .gallery-wrap,
-  #gallery {
+}
+
+.gallery-wrap,
+#gallery {
     overflow: hidden;
-  }
-  
-  #filters {
+}
+
+#filters {
     margin: 1%;
     padding: 0;
     list-style: none;
     overflow: hidden;
-  }
-  
-  #filters li {
+}
+
+#filters li {
     float: left;
-  }
-  
-  #filters li span {
+}
+
+#filters li span {
     display: block;
     padding: 5px 20px;
     text-decoration: none;
@@ -297,91 +297,120 @@ body {
     cursor: pointer;
     text-transform: uppercase;
     transition: all ease-in-out 0.25s;
-  }
-  
-  #filters li:hover span {
+}
+
+#filters li:hover span {
     color: #000;
-  }
-  
-  #filters li span.active {
+}
+
+#filters li span.active {
     background: #1fbae7;
     color: #fff;
-  }
-  
-  .gallery-item {
+}
+
+.gallery-item {
     float: left;
     width: 33.333%;
     padding: 10px;
     position: relative;
     z-index: 10;
     display: none;
-  }
-  
-  .inside {
+}
+
+.inside {
     position: relative;
     overflow: hidden;
     width: 100%;
     height: 100%;
-  }
-  
-  .details,
-  .overlay {
+}
+
+.details,
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     opacity: 0;
-  }
-  
-  .details {
+}
+
+.details {
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 2;
     transition: all 0.3s ease-in-out;
-  }
-  .details h2 {
+}
+
+.details h2 {
     color: #fff;
     font-size: 1.5em;
     font-weight: 700;
     letter-spacing: 1px;
     text-align: center;
     margin: 0;
-  }
-  .details p {
+}
+
+.details p {
     color: #fff;
     font-size: 1em;
     letter-spacing: 2px;
     text-align: center;
     margin: 0;
     text-transform: uppercase;
-  }
-  
-  .inside img {
+}
+
+.inside img {
     float: left;
     width: 100%;
-  }
-  
-  .overlay {
+}
+
+.overlay {
     background: rgba(31, 186, 231, 0.8);
     z-index: 1;
     transition: all 0.7s ease-in-out;
-  }
-  
-  .gallery-item:hover .details,
-  .gallery-item:hover .overlay {
+}
+
+.gallery-item:hover .details,
+.gallery-item:hover .overlay {
     opacity: 1;
-  }
-  
-  @media (max-width: 30em) {
+}
+
+@media (max-width: 30em) {
     .wrap {
-      padding-left: 1em;
-      padding-right: 1em;
+        padding-left: 1em;
+        padding-right: 1em;
     }
-  
+
     .gallery-item {
-      float: none;
-      width: 100%;
+        float: none;
+        width: 100%;
     }
-  }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+    /* .card-svg {
+        top: 290px;
+    } */
+}
+
+ /* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    
+}
+
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+ 
+}
