--- a/index.css
+++ b/index.css
@@ -376,6 +376,58 @@ h1 {
     opacity: 1;
 }
 
+.btn-hover {    
+    -webkit-box-shadow: 0 1px 1px rgba(72, 78, 85, .6);
+    box-shadow: 0 1px 1px rgba(72, 78, 85, .6);
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -ms-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+    transition: all .2s ease-out;
+}
+
+.btn-hover:hover {
+    -webkit-box-shadow: 0 10px 20px rgba(72, 78, 85, .6);
+    box-shadow: 0 20px 20px rgba(72, 78, 85, .6);
+    -webkit-transform: translateY(-5px);
+    -moz-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    -o-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
+
+.enquire {
+    text-align: center;
+    padding: 5px 5px;
+    border: 1px solid #ddd;
+}
+
+.enquire-btn {
+    border: 1px solid #000;
+    background-color: #000;
+    color: #fff;
+    -webkit-box-shadow: 0 1px 1px rgba(72, 78, 85, .6);
+    box-shadow: 0 1px 1px rgba(72, 78, 85, .6);
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -ms-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+    transition: all .2s ease-out;
+}
+
+.enquire-btn:hover {
+    border: 1px solid #000;
+    background-color: #000;
+    color: #fff;
+    -webkit-box-shadow: 0 10px 20px rgba(72, 78, 85, .6);
+    box-shadow: 0 20px 20px rgba(72, 78, 85, .6);
+    -webkit-transform: translateY(-5px);
+    -moz-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    -o-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
+
 @media (max-width: 30em) {
     .wrap {
         padding-left: 1em;
