--- a/index.css
+++ b/index.css
@@ -1,44 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
-.wall_img_1 {
-    width: 100%;
-    height: 600px;
-    margin: 40px auto;
-    transition: all .2s ease-in-out;
-}
-
-.wall_img_2 {
-    width: 100%;
-    height: 400px;
-    margin: 20px auto;
-    transition: all .2s ease-in-out;
-}
-
-.wall_img_1:hover,
-.wall_img_2:hover {
-    filter: grayscale(80%)
-}
-
-.wall_img_1:before,
-.wall_img_2:before {
-    content: attr(id);
-    opacity: 0;
-    transition: all .2s ease-in-out;
-    width: 100%;
-    position: absolute;
-    top: 40%;
-    text-align: center;
-    display: block;
-    font-size: 22px;
-    color: #fff;
-    mix-blend-mode: overlay;
-}
-
-.wall_img_1:hover::before,
-.wall_img_2:hover::before {
-    content: attr(id);
-    opacity: 1;
-}
 
 .test-shadow {
     text-shadow: 3px 2px 4px skyblue !important;
@@ -314,7 +275,13 @@ h1 {
     padding: 10px;
     position: relative;
     z-index: 10;
-    display: none;
+    /* display: none; */
+}
+
+.gallery-item {
+    transition: all 600ms ease 0ms, opacity 600ms linear;
+    /* display: inline-block; */
+    transform: translate(0px, 0px);
 }
 
 .inside {
